# kcu

./: .env-example  .gitignore  README.md  config-mult.json  config.json  docker-compose.yml  pyproject.toml
docker/: Dockerfile
kcu/: Dockerfile  api_torrent.py  db.py  filters.py  kinotam.py  log_config.py  main.py  pyproject.toml  settings.py
kcu/config/: log_config.py  settings.py
kcu/core/: api_torrent.py  filters.py  kinotam.py
kcu/db/: db.py
kcu/models/: film.py
